manifests-backup/gateways-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demoapp-gw
  namespace: demoapp
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istiodemo-credential
    hosts:
    - demoapp.pets.clarenceb.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp-vs
  namespace: demoapp
spec:
  hosts:
  - demoapp.pets.clarenceb.com
  gateways:
    - demoapp-gw
  http:
    - route:
      - destination:
          host: demoapp
          port:
            number: 80
